--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,15 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.php": { "runtime": "vercel-php@0.6.0" }
-  },
-  "routes": [{ "src": "/(.*)", "dest": "/api/index.php" }]
+  "builds": [
+    {
+      "src": "api/index.php",
+      "use": "vercel-php@0.6.0"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.php"
+    }
+  ]
 }
