--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:5lhtQwUPPKc7gIrvXquJrY49/gv1zcY67zmwo3oTYQI=
+APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=Asia/Jakarta
+APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=id
+APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=db_peminjaman_ruangan
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -46,12 +46,12 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_MAILER=log
+MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
-MAIL_USERNAME=5b7dfa306ab093
-MAIL_PASSWORD=703ac2829c43a7
-MAIL_ENCRYPTION=tls
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
