--- a/vercel.json
+++ b/vercel.json
@@ -16,7 +16,7 @@
       "dest": "/api/index.php"
     }
   ],
-  "public": true,
+    "public": true,
     "buildCommand": "vite build",
     "outputDirectory": "public",
     "env": {
@@ -37,7 +37,6 @@
         "DB_HOST": "mysql-peminjaman-wahyufirman26-80bd.l.aivencloud.com",
         "DB_PORT": "24949",
         "DB_DATABASE": "defaultdb",
-        "DB_USERNAME": "avnadmin",
-        "DB_PASSWORD": "AVNS_IqykOAHWS2IFNxwDqYc"
+        "DB_USERNAME": "avnadmin"
     }
 }
