--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/(css|js|images|img|fonts|storage|dist|enno|sbadmin2|sweetalert2)/(.*)",
+      "src": "/(enno|sbadmin2|sweetalert2|dist)/(.*)",
       "dest": "/public/$1/$2"
     },
     {
