--- a/vercel.json
+++ b/vercel.json
@@ -28,6 +28,10 @@
       "dest": "/public/$1"
     },
     {
+      "src": "/css/(.*)",
+      "dest": "/public/css/"
+    },
+    {
       "src": "/(.*)",
       "dest": "/api/index.php"
     }
